# gaterunner

./: .gitignore  LICENSE  README.md  auto_gatekey.sh  country_geo.csv  coverage.xml  main.py  map.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  test.yml
gaterunner/: __init__.py  __main__.py  browser.py  cdp_logger.py  cli.py  clienthints.py  context.py  debug.py  html.py  resources.py  spoof_manager.py  utils.py
gaterunner/data/: base_profiles.json  user-agents.json
gaterunner/gates/: __init__.py  geolocation.py  language.py  referrer.py  timezone.py  useragent.py  webgl.py
gaterunner/js/: chromium_stealth.js  sensor_api_stub.js  spoof_useragent.js  timezone_spoof.js  webgl_patch.js  webrtc_leak_block.js  worker_spoof_template.js
src/: browser.py  cdp_logger.py  clienthints.py  context.py  country_geo.csv  gaterunner.py  html.py  map.py  resources.py  spoof_manager.py  utils.py
src/gates/: __init__.py  base.py  clienthints.py  geolocation.py  language.py  network.py  referrer.py  stealth.py  timezone.py  useragent.py  webgl.py
src/js/: audio_context_noise.js  canvas_webgl_noise.js  chromium_stealth.js  dpr_css_patch.js  extra_stealth.js  font_mask.js  fwk_stealth.js  gamepad_midi_hid.js  geolocation_spoof.js  incognito.js  network_info_stub.js  performance_timing.js  speech_synthesis_stub.js  spoof_useragent.js  timezone_spoof.js  webgl_patch.js  worker_spoof_template.js
test_env/: pyvenv.cfg
tests/: README.md  conftest.py
tests/test_unit/: test_config.py  test_spoof_manager.py  test_utils.py
tests/test_unit/gates/: test_base_gate.py  test_useragent_gate.py  test_webgl_gate.py
